--- a/minimarket/package.json
+++ b/minimarket/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,11 @@
     "prisma": "^3.13.0"
   },
   "dependencies": {
-    "@prisma/client": "^3.13.0"
+    "@prisma/client": "^3.13.0",
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.4",
+    "validator": "^13.7.0"
   }
 }
